[package]
name = "replacer"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/Tnixc/replacer"
description = "A flexible cli to replace strings in files or a directory"
authors = ["Tnixc <tnixxc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"

